--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Mirror Fashion</title>
 	<meta charset="utf-8">
-	<meta name="viewpoint" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<!--CABEÇALHO-->
